2016-10-26 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smpp_pdu.c: applied patch that fixes memory leak if TLV is sent twice.
      Thanks to Donald for this patch.

2016-08-22 Alexander Malysh <amalysh at kannel.org>
    * gw/load.c: fixed load calculation

2016-08-04 Alexander Malysh <amalysh at kannel.org>
    * gwlib/xmlrpc.c: fixed crash if wrong formated xml given

2016-08-04 Alexander Malysh <amalysh at kannel.org>
    * gw/dlr.[ch]: added DLR_EXPIRED and DLR_UNKNOWN dlr mask

2016-08-04 Alexander Malysh <amalysh at kannel.org>
    * gwlib/gwthread-pthread.c: fixed memory leak and panic if new thread could
      not be created

2016-07-14 Alexander Malysh <amalysh at kannel.org>
    * gw/load.[ch]: Changed precision timing to microsec.
      Thanks to kneodev at gmail.com for initial patch.

2016-07-13  Stipe Tolj  <stolj at kannel.org>
    * gwlib/dbpool_mysql.c: fix error code handling for mysql_stmt_execute(). 
      The function returns CR_ error codes, we need to call _stmt_errno() to get
      the server side ER_ error codes and retry on temporary ones.
       
2016-05-26  Stipe Tolj  <stolj at kannel.org>
    * gwlib/dbpool.h: add missing define for Cassandra.
    
2016-05-09  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_smpp.c: relax SMPP DLR scanning for a better pattern match.
    [Msg-Id: <5720AAD1.2000500@kannel.org>]
    
2016-04-14  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: add documentation for escape code '%e'.
    * gw/urltrans.c: add escape code '%e' for printable hexadecimal byte codes.
    
2016-02-15  Stipe Tolj  <stolj at kannel.org>
    * gw/dlr.c: add missing original DLR bit-mask forwarding in case of 
      DLR SMSC[SUCCESS|FAIL] events.
      
2015-12-22 Alexander Malysh <amalysh at kannel.org>
    * gwlib/conn.[ch]: renamed some ssl init functions to be in conn_XXX namespace.
      test/test_http.c: implemented cmd line option to provide CA file.
